--- a/statics/view/moon.html
+++ b/statics/view/moon.html
@@ -261,7 +261,7 @@
             
             // 使用历史记录返回
             setTimeout(() => {
-                window.history.back();
+                window.location.href = 'introduce.html';
             }, 300);
         });
         
