--- a/statics/view/longmarch.html
+++ b/statics/view/longmarch.html
@@ -359,7 +359,7 @@
             
             // 使用历史记录返回
             setTimeout(() => {
-                window.history.back();
+                window.location.href = 'introduce.html'
             }, 300);
         });
         
