--- a/statics/view/satellite.html
+++ b/statics/view/satellite.html
@@ -240,7 +240,7 @@
             
             // 使用历史记录返回
             setTimeout(() => {
-                window.history.back();
+                window.location.href = 'introduce.html';
             }, 300);
         });
         
