--- a/statics/view/spacecraft.html
+++ b/statics/view/spacecraft.html
@@ -172,7 +172,7 @@
             
             // 使用历史记录返回
             setTimeout(() => {
-                window.history.back();
+                window.location.href = 'introduce.html';
             }, 300);
         });
         
